--- a/index.html
+++ b/index.html
@@ -17,11 +17,18 @@
     ></script>
   </head>
   <body>
+    <ul class="nav-links">
+      <li><a href="#about">About</a></li>
+      <li><a href="#services">Services</a></li>
+      <li><a href="#projects">Projects</a></li>
+      <li><a href="#contact">Contact</a></li>
+    </ul>
     <header>
       <nav>
         <div class="menu">
           <i class="fas fa-bars"></i>
         </div>
+
         <div class="social-media">
           <span
             ><a href="https://github.com/maora96"
@@ -63,12 +70,14 @@
             their skills. Welcome!
           </div>
 
-          <div class="img">.</div>
+          <div class="img">
+            <img src="image.png" alt="" />
+          </div>
         </div>
       </div>
     </section>
 
-    <section class="services">
+    <section class="services" id="services">
       <div class="services-content">
         <h1><span>S</span>ervices</h1>
         <div class="service-boxes">
@@ -125,7 +134,7 @@
       </div>
     </div>
 
-    <section class="projects">
+    <section class="projects" id="projects">
       <div class="projects-content">
         <h1><span>P</span>rojects</h1>
 
@@ -164,7 +173,7 @@
       </div>
     </section>
 
-    <section class="contact">
+    <section class="contact" id="contact">
       <h2 class="title"><span>L</span>et's keep in touch!</h2>
 
       <div class="contact-content">
