fix: css adjustments

--- a/index.html
+++ b/index.html
@@ -100,6 +100,15 @@
               you!</span
             >
           </div>
+
+          <div class="service-box">
+            <i class="fab fa-react fa-7x"></i>
+            <h3>Web App</h3>
+            <span
+              >Need something more complex? With login/register functionality or
+              maybe a database? Then you need a modern web app!
+            </span>
+          </div>
         </div>
         <button class="modal-btn">pricing</button>
       </div>
@@ -108,21 +117,25 @@
       <div class="modal">
         <div class="modal-description">
           <p>
-            Each project is different and I'm always open for discussing my
+            Each project is different and I'm always open to discussing my
             rates, but as a start, static websites with five or less pages cost
-            <strong>$250</strong>. Wordpress themes with five or less pages cost
-            <strong>$350</strong>.
+            <strong>$150</strong>. Wordpress themes with five or less pages cost
+            <strong>$250</strong>. Web apps' prices vary a lot depending on
+            complexity (is a database necessary? Login/register functionality?
+            etc), but <strong>$300</strong> is the minimum.
           </p>
           <p>
-            For both wordpress themes and static websites additional pages cost
+            For all services additional pages cost
             <strong>$15-$20</strong> each depending on complexity. For wordpress
-            themes, custom post types also cost extra, depending on complexity
-            as well.
+            themes, custom post types also cost extra, as do pages with
+            different functionality for web apps, depending on complexity as
+            well.
           </p>
           <p>
             All payment is done through Paypal. Half is paid upfront, half when
             the project is complete. An e-mail will be sent to you with an
-            estimated schedule for delivery of initial designs.
+            estimated schedule for delivery of initial designs, as well as
+            Trello board so you can track my progress on building your product.
           </p>
           <p>
             Feel free to contact me with any questions at renoliveira96 at gmail
@@ -139,6 +152,21 @@
         <h1><span>P</span>rojects</h1>
 
         <div class="projects-box">
+          <div class="project">
+            <div class="circle">D</div>
+            <h3>AroAce Database</h3>
+            <div class="project-desc">
+              Web app for the <em>AroAce Database</em>.
+
+              <div class="links">
+                <a href="http://www.aroacedatabase.com/">Website</a>
+                <a href="https://github.com/maora96/aroacedb-front"
+                  >Github (FRONT)</a
+                >
+              </div>
+            </div>
+          </div>
+
           <div class="project">
             <div class="circle">A</div>
             <h3>Avessa</h3>
