fix: new profile pic.

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
           </div>
 
           <div class="img">
-            <img src="image.png" alt="" />
+            <img src="icon.jpg" alt="" />
           </div>
         </div>
       </div>
